# app-jobslot-reservation-xrm

./: CMakeLists.txt  Makefile  README.md  jobSlot_reservation.cpp
